--- a/WechatLibrary/WechatManager/Web.config
+++ b/WechatLibrary/WechatManager/Web.config
@@ -30,7 +30,7 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-    <pages>
+    <pages validateRequest="false">
       <namespaces>
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
@@ -51,6 +51,7 @@
     <httpModules>
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </httpModules>
+    <httpRuntime  requestValidationMode="2.0"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
